--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,17 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+
+
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>DZ_zayvka</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
         </dependency>
 
 
