--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 
         <dependency>
-            <groupId>jstl</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
